--- a/src/app/contenido/contenido.page.scss
+++ b/src/app/contenido/contenido.page.scss
@@ -1,11 +1,29 @@
-swiper-container{
-    width: 100%;
-    height: 100%;
-  }
-  
-  swiper-slide{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+swiper-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-container {
+  overflow: hidden;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
+}
+
+.image-container:hover img {
+  transform: scale(1.1);
+}
+
+ion-button {
+  width: 100%;
+}
