--- a/src/app/contenido/contenido.page.html
+++ b/src/app/contenido/contenido.page.html
@@ -1,8 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-button (click)="redireccion()">
-      volver
-    </ion-button>
+    <div>
+      <ion-button (click)="redireccion()">
+        volver
+      </ion-button>
+    </div>
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
