--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,9 @@
-.container-servidor{
-  //background-color: red;
+h2, h3, h4, h5, p{
+  color: white;
+}
+ion-content>img{
+  width: 100%;
+  height: 100%;
 }
 .container-servidor> swiper-container > swiper-slide {
   height: 60vh;
