--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,9 +1,25 @@
 h2, h3, h4, h5, p{
   color: white;
+  text-align: center;
 }
-ion-content>img{
-  width: 100%;
-  height: 100%;
+h4{
+  margin-top: 2px;
+}
+h2{
+  font-size: 20px;
+  font-weight: bolder;
+}
+ion-title{
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+ion-content{
+  --ion-background-color: rgb(31, 28, 28)
+}
+.slide{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container-servidor> swiper-container > swiper-slide {
   height: 60vh;
@@ -45,7 +61,7 @@ swiper-container{
     margin-bottom: 20px;
   }
 
-  .header-image img {
+  .header-image>img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
@@ -82,7 +98,7 @@ p{
 .bg-black{
   background-color: black;
 }
-.l  black{
+.l-black{
   color: black;
 }
 .l-white{
@@ -126,4 +142,7 @@ p{
 }
 .mediano{
   font-size: 18px;
+}
+img{
+  border-radius: 10%;
 }
