--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -7,11 +7,14 @@ ion-content{
 }
 ion-item{
     margin: 10% auto;
+    --ion-background-color: rgba(0, 255, 255, 0);
+}
+ion-input{
+    --border-radius: 50%
 }
 ion-button{
     display: flex;
     margin-left: auto;
-    border-radius: 50%;
 }
 figure{
     display: flex;
@@ -21,7 +24,21 @@ main{
     background-color: red;
 }
 .validation-message{
-    color: red;
+    color: rgb(87, 43, 14);
     font-size: 12px;
     margin-top: 6px;
+}
+.icono{
+    display: flex; justify-content: space-between;
+}
+.formulario{
+    width: 96%;
+    margin: 20% 2%;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    border-radius: 10px;
+    padding: 5px;
+    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20210611/pngtree-yellow-overlapping-form-background-image_727095.jpg');
+}
+a{
+    cursor: help;
 }
